# Advanced_Python_UiO

./: README.md
assignment1/: friendly_greeting.txt  less_friendly_greeting.txt
assignment2/: README.md  array_class.py  test_array.py
assignment3/: README.md  pyproject.toml
assignment3/instapy/: cli.py  cython_filters.c  cython_filters.html  cython_filters.pyx  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py
assignment5/: .gitignore  README.md  app.py  strompris.py
assignment5/docs/: conf.py  index.rst  strompris.rst
assignment5/docs/_build/doctrees/: environment.pickle  index.doctree  strompris.doctree
assignment5/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strompris.html
assignment5/templates/: strompris.html
